src/snapshots/openapi_generator__test_helpers__create_response_input_typing.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateResponse {
    ///Text or array inputs to the model
    pub input: CreateResponseInput,
    pub model: String,
}
///Text or array inputs to the model
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum CreateResponseInput {
    String(String),
    InputArray(Vec<InputItem>),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct InputItem {
    pub content: String,
    #[serde(rename = "type")]
    pub type_: InputItemType,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum InputItemType {
    #[default]
    #[serde(rename = "text")]
    Text,
    #[serde(rename = "image")]
    Image,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BaseProperties {
    pub model: String,
}
