src/snapshots/openapi_generator__test_helpers__discriminated_union_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum MessageResult {
    #[serde(rename = "succeeded")]
    SucceededResult(SucceededResult),
    #[serde(rename = "errored")]
    ErroredResult(ErroredResult),
    #[serde(rename = "canceled")]
    CanceledResult(CanceledResult),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct SucceededResult {
    pub message: Message,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Message {
    pub content: String,
    pub id: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ErroredResult {
    pub error: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CanceledResult {
    pub reason: String,
}
