src/snapshots/openapi_generator__test_helpers__discriminator_no_mapping.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "species")]
pub enum Animal {
    #[serde(rename = "cat")]
    Cat(Cat),
    #[serde(rename = "dog")]
    Dog(Dog),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Dog {
    pub bark: bool,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum DogSpecies {
    #[default]
    #[serde(rename = "dog")]
    Dog,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Cat {
    pub meow: bool,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum CatSpecies {
    #[default]
    #[serde(rename = "cat")]
    Cat,
}
