src/snapshots/openapi_generator__test_helpers__duplicate_discriminator_values.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum Content {
    #[serde(rename = "text")]
    SimpleText(SimpleText),
    #[serde(rename = "rich_text")]
    RichText(RichText),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct SimpleText {
    pub value: String,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum SimpleTextType {
    #[default]
    #[serde(rename = "text")]
    Text,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct RichText {
    pub html: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub markdown: Option<String>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum RichTextType {
    #[default]
    #[serde(rename = "text")]
    Text,
}
